# whodat

./: .editorconfig  .env.example  .gitattributes  .gitignore  LICENSE  README.md  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: choco-publish.yml  ci.yml  docker.yml  release-checklist.yml  release.yml
docs/: README.md  api.md  architecture.md  cli.md  deployment.md  development.md  usage.md
docs/docagent/: index.md
infra/nginx/: default.conf
infra/nginx/html/: index.html
packaging/choco/: whodat.nuspec
packaging/choco/tools/: VERIFICATION.txt  chocolateyInstall.ps1  chocolateyUninstall.ps1
packaging/homebrew/: whodat.rb  whodat.rb.template
src/api/: .dockerignore  Dockerfile  README.md  Whodat.slnx
src/api/Whodat.Api/: Program.cs  Whodat.Api.csproj  appsettings.json  appsettings.json.example
src/api/Whodat.Api/Auth/: BearerTokenHandler.cs  GithubOptions.cs  Handles.cs  Tokens.cs
src/api/Whodat.Api/Data/: WhodatDb.cs
src/api/Whodat.Api/Endpoints/: GithubAuthEndpoints.cs  UsersEndpoints.cs
src/api/Whodat.Api/Infisical/: InfisicalConfigurationExtensions.cs  InfisicalConfigurationProvider.cs  InfisicalConfigurationSource.cs  InfisicalOptions.cs
src/api/Whodat.Api/Models/: Dtos.cs  UserEntry.cs  WhodatUser.cs
src/cli/: Cargo.toml
src/cli/src/: api.rs  ascii.rs  config.rs  main.rs  profile.rs  render.rs
src/cli/src/commands/: alias.rs  delete.rs  login.rs  lookup.rs  me.rs  mod.rs  register.rs  set.rs  update.rs  visibility.rs
(+29 files in other folders)
