[package]
name = "whodat"
version = "0.2.0"
edition = "2021"
description = "a global, public registry of identities — claim a handle, get looked up from any terminal"
license = "MIT"
repository = "https://github.com/HueByte/whodat"
readme = "../../README.md"

[[bin]]
name = "whodat"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
    "blocking",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
image = { version = "0.25", default-features = false, features = [
    "png",
    "jpeg",
    "gif",
    "webp",
] }
owo-colors = "4"
rpassword = "7"
dirs = "5"
url = "2"
webbrowser = "1"
textwrap = "0.16"
